# Aggallet

./: README.md
example/cpp/: .gitignore  README.md  generate_code.bat
example/cpp/app_angular/: angular.json  package-lock.json  package.json  tsconfig.json
example/cpp/app_angular/public/wasm/: WASM.wasm.map
example/cpp/app_angular/src/: WasmWrapper.ts
example/cpp/app_angular/src/app/: app.component.ts
example/cpp/app_angular/src/types/: WasmCallbackId.ts
example/cpp/app_vite/: package-lock.json  tsconfig.json  vite.config.ts
example/cpp/app_vite/public/wasm/: WASM.wasm
example/cpp/app_vite/src/: main.ts
example/cpp/app_vite/src/types/: WASM.d.ts
example/cpp/app_vite/src/wasm/: WASM.js
example/cpp/autogen/spec/: api.yaml  callback.yaml  callback_id_cache.json
example/cpp/wasm/: CMakeLists.txt  CMakePresets.json  setup.bat
example/cpp/wasm/src/: AppWrapper.cpp  AppWrapper.h  CallbackUtility.cpp  CallbackUtility.h  Parameters.cpp  Parameters.h  WasmCallbackId.h  WasmProvider.cpp
src/: armoron.py  callback_id_manager.py  code_generator.py  command_arg_manager.py  setting.yaml  setting_loader.py  spec_loader.py  type_loader.py  yaml_loader_base.py
src/debug/output/: WASM.d.ts  WasmCallbackId.h  WasmCallbackId.ts  WasmProvider.cpp  WasmWrapper.ts
src/debug/spec/: api.yaml  callback.yaml  callback_id_cache.json
src/template/: cpp_callback_id.j2  cpp_provider.j2  ts_callback_id.j2  ts_type_def.j2  ts_wrapper.j2
src/type/: catalog.yaml  cpp.yaml  ts.yaml
